# mi-datasets

./: .gitignore  README.md  pyproject.toml
notebooks/: tutorial.ipynb
scripts/: run_tests.py
src/mi_datasets/: __init__.py
src/mi_datasets/cli/: create_default_configs.py
src/mi_datasets/core/: base.py  cache.py  registry.py  type.py
src/mi_datasets/modalities/vision/: transforms.py
src/mi_datasets/providers/: __init__.py  huggingface.py  torchvision_datasets.py
src/mi_datasets/utils/: visualize.py
tests/: conftest.py  test_base.py  test_cache.py  test_huggingface_schema_mapping.py  test_registry.py  test_subsetting.py  test_type.py  test_vision_transforms.py
